--- a/src/components/Common/Footer/styles.css
+++ b/src/components/Common/Footer/styles.css
@@ -5,7 +5,7 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-left: 3rem;
+    /* margin-left: 3rem; */
   }
   
   footer p {
